<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:padding="@dimen/margin_medium"
    android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/selection_title" />

        <RadioGroup
            android:id="@+id/radioButtonDataEntry"
            style="@style/ToggleGroup"
            android:checkedButton="@+id/radioButton"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButtonManual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/selection_manual" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButtonOcr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/selection_automatic" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/layoutManual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDocumentNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/documentNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_document_number"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:maxLength="9"
                    android:maxLines="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDocumentExpiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/documentExpiration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_document_expiration"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/documentDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_document_date_of_birth"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonReadNfc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_nfc" />

            <Button
                android:id="@+id/buttonDownloadCSCA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_csca" />

            <Button
                android:id="@+id/buttonDeleteCSCA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_csca" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAutomatic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="vertical"
            android:visibility="gone" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>