<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Person Details Card -->
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="3dp"
            app:contentPadding="4dp"
            android:layout_marginTop="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_small"
            android:foreground="?android:selectableItemBackground"
            style="@style/CardViewStyle"
            >

            <TableLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:stretchColumns="*"
                android:paddingBottom="@dimen/margin_medium">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small">

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/iconPhoto"
                            android:layout_width="@dimen/item_photo_width"
                            android:layout_height="@dimen/item_photo_height"
                            android:contentDescription="Vehicle Owner Details"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_person"
                            android:layout_marginEnd="@dimen/margin_medium"
                            />

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_medium"
                            android:shrinkColumns="*"
                            android:layout_weight="1">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/value_name"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/margin_tiny"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/value_DOB"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/margin_tiny"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/value_gender"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/margin_tiny"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                            </TableRow>
                        </TableLayout>

                    </android.support.v7.widget.LinearLayoutCompat>
                </TableRow>
            </TableLayout>
        </android.support.v7.widget.CardView>


        <!-- Passport Information Card -->
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_documents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="3dp"
            app:contentPadding="4dp"
            android:layout_marginTop="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_small"
            android:foreground="?android:selectableItemBackground"
            style="@style/CardViewStyle">

            <TableLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:stretchColumns="1"
                android:paddingBottom="@dimen/margin_small">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small">

                        <TextView
                            android:id="@+id/label_personal_documents"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/margin_tiny"
                            android:text="@string/label_passport"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </TableRow>
                </TableLayout>

                <TableRow
                    android:id="@+id/row_passport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small">

                    <TextView
                        android:id="@+id/label_passport_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_tiny"
                        android:gravity="end"
                        android:text="@string/label_document_number"
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/margin_medium"/>

                    <TextView
                        android:id="@+id/value_passport_number"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:padding="@dimen/margin_tiny"
                        android:text="@string/label_not_available"
                        android:maxLines="2"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                </TableRow>

                <TableRow
                    android:id="@+id/row_expiration_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small">

                    <TextView
                        android:id="@+id/label_expiration_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_tiny"
                        android:gravity="end"
                        android:text="@string/label_document_expiry"
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/margin_medium"/>

                    <TextView
                        android:id="@+id/value_expiration_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:padding="@dimen/margin_tiny"
                        android:text="@string/label_not_available"
                        android:maxLines="2"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                </TableRow>

                <TableRow
                    android:id="@+id/row_issuing_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small">

                    <TextView
                        android:id="@+id/label_issuing_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_tiny"
                        android:gravity="end"
                        android:text="@string/label_document_issuing_state"
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/margin_medium"/>

                    <TextView
                        android:id="@+id/value_issuing_state"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:padding="@dimen/margin_tiny"
                        android:text="@string/label_not_available"
                        android:maxLines="2"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                </TableRow>

                <TableRow
                    android:id="@+id/row_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small">

                    <TextView
                        android:id="@+id/label_nationality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_tiny"
                        android:gravity="end"
                        android:text="@string/label_document_nationality"
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/margin_medium"/>

                    <TextView
                        android:id="@+id/value_nationality"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:padding="@dimen/margin_tiny"
                        android:text="@string/label_not_available"
                        android:maxLines="2"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                </TableRow>
            </TableLayout>
        </android.support.v7.widget.CardView>


    </android.support.v7.widget.LinearLayoutCompat>
</FrameLayout>
</ScrollView>